# foxy

./: .gitignore  .pylintrc  README.md  index.html  pyproject.toml
.github/workflows/: automation-run.yml
17/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
17/export/: influxDbData.txt  prometheusData.txt
17/history/: history-trend.json  history.json
17/widgets/: categories-trend.json  duration-trend.json  environment.json  executors.json  retry-trend.json  severity.json  status-chart.json  summary.json
18/export/: influxDbData.txt
19/export/: influxDbData.txt
20/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
20/export/: influxDbData.txt  prometheusData.txt
20/history/: history.json  retry-trend.json
20/widgets/: categories-trend.json  duration-trend.json  duration.json  environment.json  executors.json  history-trend.json  severity.json  summary.json
21/data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
21/history/: history.json
56/: index.html
57/: index.html
58/: index.html
60/: index.html
62/: index.html
64/: index.html
66/: index.html
68/: index.html
70/: index.html
configs/: props.ini
data/: test_data.json
globals/: __init__.py  dir_global.py
last-history/: categories-trend.json  duration-trend.json  history-trend.json  history.json
pages/: base_page.py  main_page.py  results_page.py  search_page.py  top_menu_bar.py
tests/: conftest.py  test_base.py  test_search.py
utils/: config_parser.py  json_parser.py
(+634 files in other folders)
