[tool.poetry]
name = "fox"
version = "0.1.0"
description = ""
authors = ["Ahrr Jay <rowanjohnas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.4.3"
pytest = "^7.1.2"
allure-pytest = "^2.10.0"
webdriver-manager = "^3.8.3"
assertpy = "^1.1"
GitPython = "^3.1.27"
cffi = "^1.15.1"
atomicwrites = "^1.4.1"
colorama = "^0.4.5"
pycparser = "^2.21"

[tool.poetry.dev-dependencies]
pylint = "^2.15.0"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
