[tool.poetry]
name = "fox"
version = "0.1.0"
description = ""
authors = ["IXEguy"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.14"
pytest = "^7.2.0"
allure-pytest = "^2.10.0"
webdriver-manager = "^3.8.3"
assertpy = "^1.1"
gitpython = "^3.1.37"
 
[tool.poetry.dev-dependencies]
pylint = "^2.15.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "globals"
]
